fix alignment on stars

--- a/app/assets/stylesheets/weekly_classes.css.scss
+++ b/app/assets/stylesheets/weekly_classes.css.scss
@@ -72,8 +72,9 @@
     }
     .stats {
       .stat {
+        vertical-align: top;
         text-align: center;
-        padding: 5px 10px 5px 10px;
+        padding: 15px 10px 5px 10px;
         position: relative;
         .number {
           font-size: 4em;
